2002-03-25  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.c (setup_accessibility) : Use
	  gtk_label_new_with_mnemonic and add an accel to the label.

2002-03-19  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.c (_to_widget) : fix signature.
	(*_from_widget) : fix signature.

2002-03-13  Jody Goldberg <jody@gnome.org>

	* gnome-keyboard-properties.c (setup_accessibility) : new.
	(main) : install the accessibility page.

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* gnome-keyboard-properties.c (bell_enums): Swap around. This
	was initially reversed because of a bug in gconf-peditor.
	Ideally this code should use the new enum functions, but
	the existing stuff works so I so no immediate need to rewrite
	it.
	(*_to/from_widget): Convert to new signature.
	
2002-03-19  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-keyboard-properties.c (bell_to_widget): Check that
	value actually is string - that fixes crash with broken schemas

2002-03-10  Seth Nickell  <snickell@stanford.edu>

	* gnome-keyboard-properties.c: (main):

	Activate the settings daemon if its not already running.

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-keyboard-properties.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* Make dialog Apply/Close.

Fri Feb  8 23:53:10 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keyboard-properties.c (dialog_response): hook up buttons.

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Install icon into the standard pixmaps directory
	so that Panel & Nautilus will pick up on it.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (bin_PROGRAMS): Rename binary
	gnome2-keyboard-properties

Tue Jan  8 15:49:15 2002  Jonathan Blandford  <jrb@redhat.com>

	* .cvsignore: update
	* Makefile.am: Add gnome-keyboard-properties.c
	* gnome-keyboard-properties.c: New, much nicer capplet.
	* gnome-keyboard-properties.glade: glade file for above.