@@ -1,5 +1,11 @@
 2002-03-25  Jody Goldberg <jody@gnome.org>
 
+	* gnome-keyboard-properties.c (volume_to_widget) : new.
+	(volume_from_widget) : new.
+	(setup_dialog) : use them here.
+
+2002-03-25  Jody Goldberg <jody@gnome.org>
+
 	* gnome-keyboard-properties.c (setup_accessibility) : Use
 	  gtk_label_new_with_mnemonic and add an accel to the label.
 
